packageの循環参照の解消